force-app/main/default/objects/Software_Activation__c/Software_Activation__c.object-meta.xml
<CustomObject>
    <description>This holds the Software Entitlement Activations for a particular Software Entitlement. This info is pulled from Zentitle through the API.</description>
    <label>Software Activation</label>
    <nameField>
        <displayFormat>Activation-{0000000}</displayFormat>
        <label>Software Activations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Software Activations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>