force-app/main/default/objects/Software_Activation__c/fields/Activated_Date__c.field-meta.xml
<CustomField>
    <fullName>Activated_Date__c</fullName>
    <description>This is the date and time of the first activation. This is stored in zentitle and updated based on API callouts.</description>
    <inlineHelpText>This is the date/time when the seat was first activated.</inlineHelpText>
    <label>Activated Date</label>
    <type>DateTime</type>
</CustomField>