force-app/main/default/objects/Software_Activation__c/fields/Deactivated_Date__c.field-meta.xml
<CustomField>
    <fullName>Deactivated_Date__c</fullName>
    <description>This stores when the license activation was deactivated in zentitle</description>
    <inlineHelpText>This is the Date the activation was deactivated and cannot be longer used.</inlineHelpText>
    <label>Deactivated Date</label>
    <type>DateTime</type>
</CustomField>