force-app/main/default/objects/Software_Activation__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>This stores the activation type, it generally will be an Online activation</description>
    <inlineHelpText>This is the mode of activation. The normal mode is Online, but sometimes it is Offline.</inlineHelpText>
    <label>Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>