force-app/main/default/objects/Software_Activation__c/fields/Seat_Id__c.field-meta.xml
<CustomField>
    <fullName>Seat_Id__c</fullName>
    <description>This holds the hostname of the computer the seat was activated on for identification purposes.</description>
    <inlineHelpText>This is the id of the computer the death was activated on. This is pulled from the computer when it&apos;s activated.</inlineHelpText>
    <label>Seat Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>