force-app/main/default/objects/Software_Activation__c/fields/Software_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Software_Entitlement__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This is the relationship to connect the activation to the entitlement.</description>
    <inlineHelpText>This is the Software Entitlement the activation was created for.</inlineHelpText>
    <label>Software Entitlement</label>
    <referenceTo>Software_Entitlement__c</referenceTo>
    <relationshipLabel>Software Activations</relationshipLabel>
    <relationshipName>Software_Activations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>