force-app/main/default/objects/Software_Activation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This is updated based on data in zentitle.</description>
    <inlineHelpText>This is the status of the activation from zentitle.</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>