force-app/main/default/objects/Software_Activation__c/fields/Zentitle_Activation_ID__c.field-meta.xml
<CustomField>
    <fullName>Zentitle_Activation_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This ID is used for API callouts to identify this record.</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the unique ID of the entitlement stored in zentitle.</inlineHelpText>
    <label>Zentitle Activation ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>